# keyboard-recommender

./: .env.example  .gitignore  DESIGN.md  DESIGN_SYSTEM.md  README.md  docker-compose.yml  pytest.ini  run_all_swagkey_pipeline.cmd  run_swagkey_compat_pipeline.cmd
backend/: .env.example  .gitignore  Makefile  Procfile  README.md  funnel-week.csv  nixpacks.toml  pyproject.toml  replay_out.json  requirements.txt
backend/alembic/: env.py
backend/data/: catalog_ingestion_manifest.json  catalog_ingestion_manifest.template.json  swagkey_catalog_regression_report.json  swagkey_catalog_regression_report.txt  swagkey_compat_specs.failures.csv  swagkey_compat_specs.json  swagkey_compat_targets.json  swagkey_switch_specs.failures.csv  swagkey_switch_specs.json  swagkey_switch_targets.json
backend/docs/: architecture-guide.md  catalog-data-architecture.md  ci-and-local-validation.md  database-schema.md  debug-guide.md  developer-guide.md  developer-replay.md  internal-debug-ui.md  runbook.md  swagkey-image-storage-policy.md  terminology-interpretation.md
backend/scripts/: apply_keycap_seed_merge.py  apply_layout_source_urls.py  apply_seed_quality_cleanup.py  audit_browse_image_coverage.py  audit_catalog_1to1_coverage.py  audit_catalog_browse_issues.py  audit_recommendation_pool.py  build_swagkey_catalog_full.py  check_migration_schema.py  check_production_https_config.py  classify_swagkey_inventory.py  clean_swagkey_inventory.py  compare_recommendations.py  crawl_swagkey_product_urls.py  diff_swagkey_seed_inventory.py  download_swagkey_images.py  enrich_component_specs.py  enrich_switch_specs.py  inspect_snapshot.py  (+35 more)
(+1136 files in other folders)
